what I want told to someone

--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
             </audio>
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的宝宝，我爱你</span><br>
-                      <span class="say"> 宝宝很幸运的在2021年遇见你，</span><br>
-                      <span class="say"> 因为那一年我很黑暗可是有了你就好像在漆黑的地方有了色彩一样</span><br>
-                      <span class="say">你每次都说我撩你但是其实我不会特别去撩女生，很奇怪遇见你那一刻就想撩你想哄你想一直陪着你，</span><br>             
-                          <span class="say"> 有些东西因为越在乎所以越怕失去，我害怕失去你更加害怕生命中没了你，不过现在我已经不在像以前一样害怕</span><br>
-                      <span class="say">因为我太爱你了，所以我害怕失去你</span><br>
-                      <span class="say">因为我太爱你了，所以我对你总啰嗦</span><br>
-                      <span class="say">希望可以执子之手，与子偕老</span><br>
-                      <span class="say">如果上天让我许三个愿望，</span><br>
-                              <span class="say">第一个是今生今世和你在一起， </span><br>
-                           <span class="say"> 第二个是再生再世和你在一起，</span><br>
-                           <span class="say">第三个是永生永世和你不分离 </span><br>
-						   <span class="say">第三个是永生永世和你不分离 </span><br>
-                      <span class="say"><span class="space"></span> -- 爱你的萌萌宝宝</span> </font>
+                    <div id="code"> <font color="#FF0000"> <span class="say">亲爱的宝宝，生日快乐</span><br>
+                      <span class="say"> 今天是你生日先祝宝宝天天开心快乐，还有健健康康</span><br>
+                      <span class="say">这是我第一次为一个人写一个网站也是特地写给你在这个特别的日子里面给你不一样的礼物，</span><br>
+                      <span class="say"></span>当我爱上你的那一刻我就觉得我的心永远会在你那边<br>             
+                          <span class="say">虽然我不是特别有钱，也没有很帅但是你还是喜欢了我，这真的是我人生中最大的惊喜</span><br>
+                      <span class="say">我爱你宝宝，你永远是我最爱的人</span><br>
+                      <span class="say">谢谢你成为我的女朋友成为宝宝成为我的唯一</span><br>
+                      <span class="say">谢谢你给我一个机会去照顾，去呵护，去陪伴你</span><br>
+                      <span class="say">如果你愿意我便护你一生如果有下辈子</span><br>
+                              <span class="say">我会再次找到你，爱上你</span><br>
+                           <span class="say">希望未来都有你</span><br>
+                           <span class="say">希望你永远陪伴着我</span><br>
+						   <span class="say">希望你永远都开开心心</span><br>
+                      <span class="say"><span class="space"></span> -- 爱你的镛</span> </font>
                           <br />
                           <br />
                       </p>
                     </div>
                   </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">亲爱的，我喜欢你</font>
-<span class="STYLE1">已经是……</span>
+                    <span class="STYLE1"></span><font color="#33CC00">亲爱的，我爱上你</font>
+<span class="STYLE1">已经……</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
