--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <div id="wrap">
                 <div id="text">
                     <div id="code"> <font color="#FF0000"> <span class="say">亲爱的宝宝，生日快乐</span><br>
-                      <span class="say"> 今天是你生日先祝宝宝天天开心快乐，还有健健康康</span><br>
-                      <span class="say">这是我第一次为一个人写一个网站也是特地写给你在这个特别的日子里面给你不一样的礼物，</span><br>
-                      <span class="say"></span>当我爱上你的那一刻我就觉得我的心永远会在你那边<br>             
-                          <span class="say">虽然我不是特别有钱，也没有很帅但是你还是喜欢了我，这真的是我人生中最大的惊喜</span><br>
+                      <span class="say"> 今天是你生日先祝宝宝天天开心快乐，</span><br>
+                      <span class="say">这是送给你一份特别的生日礼物，</span><br>
+                      <span class="say"></span>爱你是我的职业，想你是我的事业，抱你是我的特长，吻你是我的专业<br>             
+                          <span class="say">虽然我不是特别有钱，也没有很帅但是你还是喜欢了我，这真是我人生中最美的礼物</span><br>
                       <span class="say">我爱你宝宝，你永远是我最爱的人</span><br>
                       <span class="say">谢谢你成为我的女朋友成为宝宝成为我的唯一</span><br>
                       <span class="say">谢谢你给我一个机会去照顾，去呵护，去陪伴你</span><br>
